--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,18 @@
-#header {
+#title {
     width:1100px;
     height:200px;
     background-color:#e1e1ee;
     opacity:0.9;
     border-radius: 15px;
     font-family:Verdana;
-    color:black;
+    color:#000B16;
+    float:center;
+}
+
+#nav {
+    height:200px;
+    width:1100px;
+    float:center;
 }
 
 #me {
@@ -19,4 +26,24 @@ body {
     background-image:url(https://s-media-cache-ak0.pinimg.com/originals/e8/2e/c0/e82ec0c274c7cc89dbf478666c690433.jpg);
     background-size:cover;
     background-repeat:none;
+}
+
+.button {
+    opacity:0.9;
+    background-color:#e1e1ee;
+    font-family:Verdana;
+    color:#000B16;
+    height:30px;
+    width:200px;
+    border-radius: 10px;
+    padding-top: 10px;
+    text-align: center;
+    text-decoration: none;
+    margin:10px;
+    float:left;
+}
+
+.button:hover {
+    background-color:#000B16;
+    color:#e1e1ee;
 }
